--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat application</title>
     <script src="js/client.js"></script>
+    <link rel="stylesheet" href="CSS/Style.css"></link>
 </head>
 <body>
-    
+    <nav>
+        <img></img>
+    </nav>
 </body>
 </html>
