--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="CSS/Style.css"></link>
 </head>
 <body>
-    <nav>
-        <img></img>
+    <nav class="hello"></nav>
+        <img src="Images/chat.png" class="chat"></img>
     </nav>
 </body>
 </html>
