--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
     <nav class="hello"></nav>
         <img src="Images/chat.png" class="chat"></img>
     </nav>
+    <div class="container">
+        <div class="message right">
+            Sachin: Hey! How are you?
+        </div>
+        <div class="message left">
+            Ashmina: Hey! I am fine. How about you?
+        </div>
+
+    </div>
 </body>
 </html>
