--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </nav>
     <div class="container">
         <div class="message left">
-            Sachin: Hey! How are you?
+            Lovin: Hey! How are you?
         </div>
         <div class="message right">
             Ashmina: Hey! I am fine. How about you?
