--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
         <div class="message right">
             Ashmina: Hey! I am fine. How about you?
         </div>
+    </div>
+    <div class="send">
+        <form action="#" id="send-container">
+            <input type="text" name="messageInp" id="messageInp"></input>
+            <button class="btn" type="submit">Send</button>
+        </form>
 
     </div>
+
 </body>
 </html>
