--- a/index.html
+++ b/index.html
@@ -18,6 +18,30 @@
         <div class="message right">
             Ashmina: Hey! I am fine. How about you?
         </div>
+        <div class="message right">
+            Ashmina: Hey! I am fine. How about you?
+        </div>
+        <div class="message right">
+            Ashmina: Hey! I am fine. How about you?
+        </div>
+        <div class="message right">
+            Ashmina: Hey! I am fine. How about you?
+        </div>
+        <div class="message right">
+            Ashmina: Hey! I am fine. How about you?
+        </div>
+        <div class="message right">
+            Ashmina: Hey! I am fine. How about you?
+        </div>
+        <div class="message right">
+            Ashmina: Hey! I am fine. How about you?
+        </div>
+        <div class="message right">
+            Ashmina: Hey! I am fine. How about you?
+        </div>
+        <div class="message right">
+            Ashmina: Hey! I am fine. How about you?
+        </div>
     </div>
     <div class="send">
         <form action="#" id="send-container">
