Your commit message here

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat application</title>
-    <script src="js/client.js"></script>
+    <!-- socket.io link  server ra client connect garnuko laagi-->
+    <!-- <script defer src="http://localhost:8000/socket.io/socket.io.js"></script> -->
+    <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
+    <script defer src="js/client.js"></script>
     <link rel="stylesheet" href="CSS/Style.css"></link>
 </head>
 <body>
@@ -14,30 +17,6 @@
     <div class="container">
         <div class="message left">
             Lovin: Hey! How are you?
-        </div>
-        <div class="message right">
-            Ashmina: Hey! I am fine. How about you?
-        </div>
-        <div class="message right">
-            Ashmina: Hey! I am fine. How about you?
-        </div>
-        <div class="message right">
-            Ashmina: Hey! I am fine. How about you?
-        </div>
-        <div class="message right">
-            Ashmina: Hey! I am fine. How about you?
-        </div>
-        <div class="message right">
-            Ashmina: Hey! I am fine. How about you?
-        </div>
-        <div class="message right">
-            Ashmina: Hey! I am fine. How about you?
-        </div>
-        <div class="message right">
-            Ashmina: Hey! I am fine. How about you?
-        </div>
-        <div class="message right">
-            Ashmina: Hey! I am fine. How about you?
         </div>
         <div class="message right">
             Ashmina: Hey! I am fine. How about you?
