--- a/index.html
+++ b/index.html
@@ -1,34 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat application</title>
-    <!-- socket.io link  server ra client connect garnuko laagi-->
-    <!-- <script defer src="http://localhost:8000/socket.io/socket.io.js"></script> -->
-    <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
-    <script defer src="js/client.js"></script>
-    <link rel="stylesheet" href="CSS/Style.css"></link>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chat Application</title>
+  <link rel="stylesheet" href="CSS/Style.css">
 </head>
 <body>
-    <nav class="hello"></nav>
-        <img src="Images/chat.png" class="chat"></img>
-    </nav>
-    <div class="container">
-        <div class="message left">
-            Lovin: Hey! How are you?
-        </div>
-        <div class="message right">
-            Ashmina: Hey! I am fine. How about you?
-        </div>
-    </div>
-    <div class="send">
-        <form action="#" id="send-container">
-            <input type="text" name="messageInp" id="messageInp"></input>
-            <button class="btn" type="submit">Send</button>
-        </form>
+  <nav class="hello">
+    <img src="Images/chat.png" class="chat" alt="Chat Logo">
+  </nav>
+  <h3 class="applications">Chat Application</h3>
+  <br/>
+  <div class="container"></div>
+  <div class="send">
+    <form action="#" id="send-container">
+      <input type="text" name="messageInp" id="messageInp" placeholder="Type a message..." autocomplete="off">
+      <button class="btn" type="submit">Send</button>
+    </form>
+  </div>
 
-    </div>
-
+  <script src="http://localhost:8000/socket.io/socket.io.js" defer></script>
+  <script src="js/client.js" defer></script>
 </body>
 </html>
