--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <nav class="hello">
     <img src="Images/chat.png" class="chat" alt="Chat Logo">
   </nav>
-  <h3 class="applications">Chat Application</h3>
+  <!-- <h3 class="applications">Chat Application</h3> -->
   <br/>
   <div class="container"></div>
   <div class="send">
